[package]
name = "transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.29.0" 
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-tlv-account-resolution = "0.5.2"
spl-token = "4.0.1"
spl-transfer-hook-interface = "0.5.1"
